# promptflow-starter-template

./: .pre-commit-config.yaml  Dockerfile  Dockerfile.fastapi  README.md  docker-compose.yml  pyproject.toml
.github/actions/: build.yml
.github/workflows/: build.yml  pull_request.yml
promptflow_starter_template/: README.md  api.py  flow.dag.yaml
